# sewer-studio

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  AUDIT_FIX_PROMPT.md  AUDIT_SEWERSTUDIO_2026-04-04.md  AUDIT_SEWERSTUDIO_KOMPLETT_2026-04-19.md  AuswertungPro.sln  AuswertungTool.ps1  CHANGELOG.md  CLAUDE.md  DATEIEN_MANIFEST.md  Directory.Packages.props  EXTERNE_REPOS_BEWERTUNG.md  FLORENCE2_CALIBRATION_REPORT.json  HaltungenTool.ps1  HaltungsAuswertung.ps1  HaltungsAuswertungPro.ps1  HaltungsAuswertungPro_v2.ps1  KI_CODIERMODUS_ANLEITUNG.md  KI_VIDEO_TRAINING_ANLEITUNG.md  KOSTENBERECHNUNG.md  LIEFERUEBERSICHT.md  PROGRAMMIER_SKILLS_GUIDE.md  Phase15Status.md  README.md  README_v2.md  RELEASE_NOTES_v2.1.0.md  ReadPdfHeader.ps1  SELBSTTRAINING_ABLAUF.md  START.md  SewerStudio_Bedienungsanleitung.md  SewerStudio_Programmbeschreibung.txt  Start-KiMaximum4070.ps1  Start-KiMaximum5090.ps1  TestPdfRead.ps1  V41_UPGRADE_PROMPT.md  VsaRiliZustand.ps1  _check_nutzungsart.ps1  (+6 more)
.github/: dependabot.yml
Services/: AutosaveService.ps1  Bootstrap.ps1  ExcelExportService.ps1  KostenberechnungService.ps1  LeistungskatalogService.ps1  LoggingService.ps1  MergeService.ps1  Models.ps1  PdfImportService.ps1  ProjectManagerService.ps1  ProjectStorageService.ps1  ValidationService.ps1  VsaRiliZustandService.ps1  Xtf405ImportService.ps1  XtfImportService.ps1  user_catalog_seed.v2.json
benchmarks/: qwen_benchmark.py
docs/: 2026-04-13-ki-pipeline-audit.md  2026-04-14-ki-pipeline-audit-v2.md  2026-04-14-ki-pipeline-audit-v3-final.md  2026-04-14-ki-pipeline-audit-v4-final.md  2026-05-10-deep-dive-fehler-und-robustheit.md  2026-05-31-arbeitsstand-klartext.md  ADR-006-vsa-code-single-source-of-truth.md  ADR-007-vsa-regelmodell-v2-design.md  ADR-007-vsa-zustandsklassifizierung-und-anwendungsregeln.md  ADR-008-qualitygate-statisch-und-pfadkalibriert.md  ADR-009-dedup-zusammenfuehrung.md  AUDIT_2026-05-10_GESAMTUMBAU.md  AUDIT_SCHLUSSANALYSE_2026-05-06.md  AUDIT_SECURITY_ARCHITECTURE_ERRORS_2026-04-25.md  AUDIT_SEWERSTUDIO_2026-04-23.md  CODIER-MODUS-PIPELINE.md  INTENSIV_AUDIT_STANDORTBESTIMMUNG_2026-05-07.md  KI-PIPELINE-GESAMTAUDIT.md  KI_CLASSIFIER_EVALSET_GAP_2026-05-24.md  KI_DIAGNOSE_2026-05-24.md  PODCAST_AUDIT_2026-05-07.md  PROGRAMMAUDIT_2026-05-08.md  PROGRAMMAUDIT_AKTUELL_2026-05-08.md  PROGRAMMAUDIT_GEGENPRUEFUNG_AUSSENSICHT_2026-05-10.md  ROADMAP.md  SEWERSTUDIO_IST_SOLL_2026-04-20.md  STANDORTBESTIMMUNG_2026-05-10.md  SewerStudio_Audit_2026.html  SewerStudio_Programm_Audit_2026-04-11.md  TEST_BRIEFING_2026-05-07.md  TOOL_TRIAGE_2026-05-26.md  WINCAN_PHOTOASSISTANT_ROADMAP.md  generate_audit.py  generate_audit_pdf.py  generate_report.py  vsa-zustandsklassifizierung-2023-schwellen.md  wincan-photo-tools-extraction.md
scripts/: brain-mirror-restore-drill.ps1
sidecar/: README.md  build_engine.ps1  pyproject.toml  requirements-lock.txt  requirements.txt  setup.ps1  start_sidecar.ps1
sidecar/florence2_shadow_log/: training_pairs.jsonl
sidecar/models/: .gitignore
sidecar/models/florence-2/: configuration_florence2.py  modeling_florence2.py  processing_florence2.py
sidecar/models/florence-2-ft/: configuration_florence2.py  modeling_florence2.py  processing_florence2.py
sidecar/scripts/: auto_calibrate_florence2.py  calibrate_florence2.py  evaluate_clip.py  generate_yolo_labels.py
sidecar/sidecar/: __init__.py  config.py  gpu_manager.py  main.py  telemetry.py
sidecar/sidecar/models/: box_utils.py  changenet_wrapper.py  dino_wrapper.py  dinov2_wrapper.py  image_decode.py  nemotron_parse_wrapper.py  pipe_axis.py  sam_wrapper.py  video_decoder.py  vsr_wrapper.py  yolo_wrapper.py
sidecar/sidecar/routes/: changenet.py  dino.py  dinov2.py  enhance.py  health.py  lora_training.py  parse.py  pipe_axis.py  sam.py  training.py  video.py  yolo.py
sidecar/sidecar/schemas/: detection.py  dinov2.py  parse.py  pipe_axis.py  segmentation.py
sidecar/tests/: conftest.py  test_batch_endpoints.py  test_box_utils.py  test_dino.py  test_dinov2.py  test_enhance.py  test_error_handling.py  test_frame_quality.py  test_image_decode.py  test_loopback_security.py  test_pipeline.py  test_ring_scan_debug.py  test_sam.py  test_sam_unit.py  test_telemetry.py  test_training_security.py  test_yolo.py  test_yolo_runtime.py  test_yolo_unit.py
tools/: MdbSchemaReader.cs  MdbVideoMapping.cs  benchmark_haltungen.json  check_m150_files.py  generate_bboxes_dino_sam.py  initial_yolo_training.py  mdb_si_t_fields.txt  mdb_video_mapping.txt  pdf_audit.py  pdf_audit_result.csv  smoke_test_pipeline.py  (+1 more)
(+1611 files in other folders)
