[project]
name = "sewer-sidecar"
version = "1.0.0"
description = "Multi-Model Vision Pipeline Sidecar for Sewer-Studio"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "torch>=2.1",
    "torchvision>=0.16",
    "ultralytics>=8.2",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dino = ["groundingdino-py>=0.4"]
sam = ["segment-anything-2>=0.1"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

# Audit 2026-05-17 (Nachzieh-v2): pytest-Defaults.
#
# - Marker `unit`, `live`, `model` machen die Test-Schichten explizit:
#   * unit  → reine Pure-Function-Tests, immer aktiv
#   * live  → braucht laufenden Sidecar auf localhost:8100, skipped ohne `--run-live`
#   * model → braucht echte Modellgewichte + GPU, skipped ohne `--run-model`
# - Default-Lauf (`pytest tests/`) faehrt nur Unit-Tests.
#
# basetemp wird hier NICHT hartkodiert: conftest.py nutzt den pytest-Default,
# solange dessen Temp-Root les-/schreibbar ist. Nur bei kaputten Temp-Rechten
# setzt conftest.py einen lokalen Fallback. Wer explizit umlenken will, kann
# `pytest --basetemp=<path>` lokal setzen.
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: reine Pure-Function-Tests ohne Sidecar/Modelle",
    "live: braucht laufenden Sidecar auf localhost:8100 (mit --run-live aktivieren)",
    "model: braucht echte Modellgewichte (YOLO/SAM/DINO) + GPU (mit --run-model aktivieren)",
]
